public/styles/index.css
/* Global styles */
:root {
  --pink1: #ebc7fd;
  --pink2: #c453de;
  --pink3: #cc18c3;
  --green1: #3a8c3d;
  --green2: #275e28;
  --white1: #f5f5f5;
  --white2: #eaeaea;
  --black1: #5d5165;
  --black2: #4b4747;
  --black3: #131313;
  --radius: 10px;
}

body {
  font-family: Roboto, sans-serif;
  margin: 0;
  padding: 0;
  background-color: var(--white2);
  color: var(--black3);
}

.title {
  font-size: 36px;
  font-weight: bold;
}

/* Header styles */
header {
  display: flex;
  justify-content: space-between;
  padding: 16px 100px;
  background-color: var(--pink1);
}

button {
  font-size: 20px;
  border: none;
  border-radius: var(--radius);
  background-color: var(--pink2);
  color: var(--white2);
  cursor: pointer;
  transition: background-color 0.5s ease;
  margin-left: 8px;
}

.big-button {
  padding: 16px 32px;
}

.small-button {
  padding: 8px 32px;
}

/* Main styles */

button:hover {
  background-color: var(--pink3);
  color: var(--black3);
}

.sort-buttons {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-bottom: 20px;
  margin-top: 20px;
  padding: 10px 0;
}

.sort-button {
  background-color: var(--white2);
  color: var(--pink2);
  border: 3px solid var(--pink2);
}

.sort-button.pressed {
  background-color: var(--pink2);
  color: var(--black3);
}

.sort-button:hover {
  background-color: var(--pink3);
  border: 3px solid var(--pink3);
}

.todo {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 50px;
  padding-right: 50px;
  background-color: var(--pink1);
  border-radius: var(--radius);
  margin-bottom: 10px;
  margin-left: 100px;
  margin-right: 100px;
}

.todo-details-title {
  display: flex;
  gap: 24px;
  align-items: center;
  width: 400px;
}

.todo-details {
  font-size: 20px;
}

.todo-title {
  font-size: 36px;
}

.todo-actions {
  display: flex;
  align-items: center;
}

.todo-status-button {
  padding: 4px 16px;
}

.todo-status-button.done {
  background-color: var(--green1);
  color: var(--white2);
}

.todo-status-button.done:hover {
  background-color: var(--green2);
  color: var(--black3);
}

input {
  font-size: 16px;
  height: 30px;
  background-color: var(--white2);
  border: none;
  border-radius: var(--radius);
}

select {
  font-size: 16px;
  height: 30px;
  background-color: var(--white2);
  border: none;
  border-radius: var(--radius);
}

#create-todo {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px;
  background-color: var(--pink1);
  border-radius: var(--radius);
  margin-bottom: 10px;
  margin-left: 100px;
  margin-right: 100px;
}

/* Footer styles */
footer {
  padding-left: 100px;
  padding-top: 20px;
}

/* Dark Mode */

body.dark-mode {
  background-color: var(--black2);
  color: var(--white1);
}

.dark-mode header {
  background-color: var(--black1);
}

.dark-mode .todo {
  background-color: var(--black1);
  color: var(--white1);
}

.dark-mode #create-todo {
  background-color: var(--black1);
}

.dark-mode .sort-button {
  background-color: var(--black2);
}

